--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <a href="#soccer-tips">Soccer Tips</a> |
             <a href="#video">Soccer Video</a> |
             <a href="#tableau">My Soccer Tableau Visualization</a> |
-            <a href="game.html">Game</a>
+            <a href="game.html">Game</a> |
+            <a href="https://gabr0314.github.io/IS-201-Final-Project/index.html" target="_blank" style="color: red;">My personal Page</a>
         </nav>
     </header>
 
